--- a/src/index.css
+++ b/src/index.css
@@ -161,3 +161,9 @@ animation: animate 3s ease-in-out  infinite ;
   width: 100vw;
   overflow-x: hidden;
 }
+
+.body{
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
