--- a/src/index.css
+++ b/src/index.css
@@ -157,10 +157,10 @@ animation: animate 3s ease-in-out  infinite ;
 .body{
   width: 100vw;
   height: 100%;
-  /* overflow-x: hidden; */
+  overflow-x: hidden!important;
 }
 
 #root{
   width: 100%;
-  overflow-x: hidden;
+  overflow-x: hidden!important;
 }
