--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playfair+Display:wght@400;500&family=Poppins:ital,wght@0,200;0,400;0,500;0,700;1,100;1,300&display=swap');
-
+body,
+html {
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,8 +12,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   list-style: none;
   text-decoration: none;
-  width: 100%;
-  overflow-x: hidden;
+  width: 100% !important;;
+  overflow-x: hidden !important;;
 }
 .logo{
   font-family: Bebas Neus;
@@ -155,9 +158,10 @@ animation: animate 3s ease-in-out  infinite ;
   /* overflow: hidden; */
 }
 .body{
-  width: 100vw;
+  width: 100%;
   height: 100%;
   overflow-x: hidden!important;
+  position: relative;
 }
 
 #root{
